# SecureCodeEnv

./: Dockerfile  README.md  inference.py  pyproject.toml
SecureCodeEnv/: README.md  openenv.yaml  requirements.txt  validate.py
SecureCodeEnv/app/: dashboard.py  main.py  models.py  state.py
SecureCodeEnv/codegraph/: extractor.py  graph.py
SecureCodeEnv/graders/: attacks.py  consistency.py  correctness.py  documentation.py  performance.py  static_analysis.py
SecureCodeEnv/tasks/: task_registry.py
SecureCodeEnv/tasks/easy/: password_validator.py  token_generator.py
SecureCodeEnv/tasks/hard/: file_upload_handler.py
SecureCodeEnv/tasks/medium/: file_path_handler.py  sql_query_builder.py
app/: main.py  routes.py
codegraph/: serializer.py
graders/: reward_aggregator.py
sandbox/: executor.py  payload_gen.py
tasks/easy/: input_sanitizer.py
tasks/hard/: auth_middleware.py  jwt_validator.py
tasks/medium/: rate_limiter.py
