[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "SecureCodeEnv"
version = "2.0.0"
description = "An RL environment for training LLM agents to write production-ready, secure Python code."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.7.0",
    "bandit==1.7.10",
    "openai==1.40.0",
    "requests==2.32.3",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "bcrypt==4.1.3",
    "PyJWT==2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "graders*", "codegraph*", "sandbox*", "tasks*"]

[project.scripts]
serve = "uvicorn app.main:app --host 0.0.0.0 --port 7860"

[tool.openenv]
name = "SecureCodeEnv"
version = "2.0.0"
entrypoint = "app.main:app"
port = 7860
reset_endpoint = "/reset"
step_endpoint = "/step"
state_endpoint = "/state"
health_endpoint = "/health"
framework = "fastapi"
